--- a/canary.html
+++ b/canary.html
@@ -26,11 +26,17 @@
     <main>
         <h1>
             <!-- Bird name here -->
+            Canary
         </h1>
         <!-- Description of bird -->
         <div>
             <!-- Image of bird -->
+            <img src="./assets/images/canary.jpg" alt="canary image">
             <!-- Audio of bird -->
+            <audio controls>
+                <source src="./assets/sounds/canary.mp3" type="audio/mpeg">
+                <source src="./assets/sounds/canary.wav" type="audio/wav">
+            </audio>
             <div>
                 <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Canary_(Serinus_canaria)_01.jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/14-Canary-Singing.html">SoundBible</a></h4>
             </div>
