--- a/meadowlark.html
+++ b/meadowlark.html
@@ -26,11 +26,17 @@
     <main>
         <h1>
             <!-- Bird name here -->
+            Meadowlark
         </h1>
         <!-- Description of bird -->
         <div>
             <!-- Image of bird -->
+            <img src="./assets/images/western-meadowlark.jpg" alt="canary image">
             <!-- Audio of bird -->
+            <audio controls>
+                <source src="./assets/sounds/meadowlark.mp3" type="audio/mpeg">
+                <source src="./assets/sounds/meadowlark.wav" type="audio/wav">
+            </audio>
             <div>
                 <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Western_Meadowlark_-_Oregon_-_USA_S4E9863_(23593630930).jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/2180-Meadowlark.html">SoundBible</a></h4>
             </div>
