--- a/rooster.html
+++ b/rooster.html
@@ -26,11 +26,17 @@
     <main>
         <h1>
             <!-- Bird name here -->
+            Rooster
         </h1>
         <!-- Description of bird -->
         <div>
             <!-- Image of bird -->
+            <img src="./assets/images/rooster.jpg" alt="canary image">
             <!-- Audio of bird -->
+            <audio controls>
+                <source src="./assets/sounds/rooster.mp3" type="audio/mpeg">
+                <source src="./assets/sounds/rooster.wav" type="audio/wav">
+            </audio>
             <div>
                 <h4>Image credit: <a href="https://www.pickpik.com/animal-avian-bird-feathers-macro-poultry-8199">PickPik</a> Audio credit: <a href="http://soundbible.com/2040-Rooster-Crowing-2.html ">SoundBible</a></h4>
             </div>
