--- a/rooster.html
+++ b/rooster.html
@@ -44,6 +44,7 @@
         <div>
             <h2>Video on Youtube</h2>
             <!-- video/iframe here -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IhNcw2AYi_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </main>
 </body>
